Centralize storage and replace runtime caches in place
Introduce shared instance and application paths, atomic publication, bounded launch/log retention, and one current runtime inventory and source set. Guard compiler readers during replacement and document the deliberate storage-format break without migrations.

Took 9 minutes